--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MNEMONIC="rough pelican egg physical ask husband boil medal brown rifle grow honey"
-ENDPOINT_KEY="d4370bfc57684c3c832acb85f37659a6"
+MNEMONIC="PUT YOUR METAMASK MNEMONIC HERE"
+ENDPOINT_KEY="PUT YOUR INFURA KEY HERE"
